{
    "name": "Player_Input",
    "maps": [
        {
            "name": "Player",
            "id": "41518d1c-b7ed-4a20-b30e-515b7c186e73",
            "actions": [
                {
                    "name": "MovementHorizontal",
                    "type": "Value",
                    "id": "06004a74-3741-461a-b6c0-b23924d30585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MovementVertical",
                    "type": "PassThrough",
                    "id": "e65b8e14-b3da-4c32-92b3-6e7676a50f42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Wait/Follow",
                    "type": "PassThrough",
                    "id": "c0e13151-17fc-4430-9476-943dd115bbd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "2612685f-67f1-4230-b26a-e8175336c75d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4ff7a92a-e6ad-4427-957c-ed504df8e3ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Blowdart",
                    "type": "PassThrough",
                    "id": "a24e89dd-1b16-4e2f-93a8-3b0fbb06bcec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Flute",
                    "type": "Button",
                    "id": "829d86af-d2e3-4bc8-a4d8-28d3b8279e08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Crounch",
                    "type": "Button",
                    "id": "131523cb-d247-4c0e-bf46-5b3cd2ec2321",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "2f69a443-3d13-4983-9f6a-1d7bb48eb931",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "eef7d287-7e20-411b-af3b-f321abe9f9f5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a2658fce-0590-478b-913e-16c5a6b58729",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e50093e2-fc7d-46f1-97a2-86acdfcd27b0",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c17cfdfc-ace9-4736-a27b-f0965030f836",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Wait/Follow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f8dfdaf-35be-489c-a982-2bd3b29024a4",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "708b1114-05ab-48d2-b4aa-b58cd5d32ac8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "b8404db4-7789-4f93-8085-27cf2bbca04d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ce331aff-4160-46a8-b975-d216f7bfbba9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "209fde69-6578-47d6-b58b-88f8453a9e2b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b04b859e-d411-4d86-a092-469ce8eee615",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Blowdart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40860d6c-3fd8-441e-bc3e-53b5cdf479e3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Flute",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22114182-48ed-4de6-b657-9553d8bc2e31",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Crounch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dac45b9-2c7f-4d59-97ca-144d6ca40edd",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ControlScheme",
            "bindingGroup": "ControlScheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Joystick>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}